Final (Missing: Comments)

--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
-    </head>
-    <body>
-    
-        <script src="recipe.js" async defer></script>
-    </body>
+<html lang="en">
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>OA's Recipe App</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="container">
+      <div class="search-content">
+        <input type="text" placeholder="What's your favorite dish?" id="user-input"/>
+        <button id="search">Search</button>
+      </div>
+      <div id="result"></div>
+    </div>
+    <script src="recipe.js"></script>
+  </body>
 </html>
